# literary_style_model

./: .gitignore  README.md  docker.def  pyproject.toml
Train/: Multi_GRPOTrainer.py  SFTTrainer.py  ds_config.json  sentence_trainer.py  utils.py
config/: ds_config.json  fsdp_config.yaml
data_analysis/: Unified_analysis.py  benchmark.py  benchmark_ds.py  chunk_book.py
data_processing/: GRPO_dataset_builder.py  Refill.py  SFT_dataset_builder.py  Style_evaluation.py  export_dataset_to_json.py  gutenberg_download.py  prompts.py  upload_triplet_dataset.py
